# cpu_pathtracer

./: .gitignore  Cargo.toml  ReadME.md
src/: bvh_tree.rs  main.rs  object_handler.rs  raycaster.rs  renderer.rs  stl_parser.rs  stl_parser_copy.rs
storage/: created rays.txt  tetraeder.stl
tests/: cone.stl  cone_ASCII.stl  cup_ascii.stl  dbg_boxes.txt  pyramid_ascii.stl  pyramid_bvh.txt  vol_dbg_real.txt
