[package]
name = "cpu_pathtracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
indicatif = "0.17.8"
rayon = "1.10.0"
serde = {version = "1.0.203", features = ["derive", "alloc" ]}
serde_json = "1.0.117"
