[package]
name = "cpu_pathtracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.28.0"
image = {version = "0.25.1", features = ["rayon"]}
indicatif = "0.17.8"
rayon = "1.10.0"
serde = {version = "1.0.203", features = ["derive", "alloc" ]}
serde_json = "1.0.117"
